<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.wso2.ei</groupId>
        <artifactId>org.wso2.ei.mb.test</artifactId>
        <version>7.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <name>MB AMQP based Test Module</name>
    <artifactId>org.wso2.ei.mb.amqp.test</artifactId>
    <packaging>jar</packaging>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-surefire-plugin</artifactId>-->
                <!--<version>2.14.1</version>-->
                <!--<configuration>-->
                    <!--&lt;!&ndash; Suite testng xml file to consider for test execution &ndash;&gt;-->
                    <!--<suiteXmlFiles>-->
                        <!--<suiteXmlFile>src/test/resources/suites-test-testng.xml</suiteXmlFile>-->
                        <!--<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
                    <!--</suiteXmlFiles>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <inherited>false</inherited>
                <version>2.12.4</version>
                <configuration>
                    <!--<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine>-->
                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
                    <parallel>false</parallel>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/suites-test-testng.xml</suiteXmlFile>
                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemProperties>
                        <property>
                            <name>maven.test.haltafterfailure</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>carbon.zip</name>
                            <value>
                                ${basedir}/../../../distribution/target/wso2mb-${product.mb.version}.zip
                            </value>
                        </property>
                        <property>
                            <name>framework.resource.location</name>
                            <value>
                                ${basedir}/src/test/resources/
                            </value>
                        </property>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>project.build.directory</name>
                            <value>${project.build.directory}</value>
                        </property>
                        <sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>
                        <instr.file>${basedir}/src/test/resources/instrumentation.txt</instr.file>
                        <filters.file>${basedir}/src/test/resources/filters.txt</filters.file>
                    </systemProperties>
                    <workingDirectory>${basedir}/target</workingDirectory>
                </configuration>
            </plugin>
            <!--<plugin>-->
                <!--<artifactId>maven-dependency-plugin</artifactId>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>copy-jacoco-dependencies</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>copy-dependencies</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<outputDirectory>${project.build.directory}/jacoco</outputDirectory>-->
                            <!--<includeTypes>jar</includeTypes>-->
                            <!--<includeArtifactIds>org.jacoco.agent</includeArtifactIds>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                    <!--<execution>-->
                        <!--<id>copy-secVerifier</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>copy-dependencies</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<outputDirectory>${basedir}/target/security-verifier</outputDirectory>-->
                            <!--<includeTypes>aar</includeTypes>-->
                            <!--<includeArtifactIds>SecVerifier</includeArtifactIds>-->
                            <!--<stripVersion>true</stripVersion>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                    <!--<execution>-->
                        <!--<id>unpack-mar-jks</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>unpack</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<artifactItems>-->
                                <!--<artifactItem>-->
                                    <!--<groupId>org.wso2.mb</groupId>-->
                                    <!--<artifactId>wso2mb</artifactId>-->
                                    <!--<version>${product.mb.version}</version>-->
                                    <!--<type>zip</type>-->
                                    <!--<overWrite>true</overWrite>-->
                                    <!--<outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>-->
                                    <!--<includes>**/*.jks,**/*.mar,**/axis2_client.xml</includes>-->
                                <!--</artifactItem>-->
                            <!--</artifactItems>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.7.1</version>
                <configuration>
                    <outputDirectory>${basedir}/target/report</outputDirectory>
                    <outputName>amqp-test</outputName>
                </configuration>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>report-only</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--<plugin>-->
                <!--<artifactId>maven-resources-plugin</artifactId>-->
                <!--<version>2.6</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>copy-resources-jks</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>copy-resources</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<outputDirectory>${basedir}/src/test/resources/keystores/products-->
                            <!--</outputDirectory>-->
                            <!--<resources>-->
                                <!--<resource>-->
                                    <!--<directory>-->
                                        <!--${basedir}/target/tobeCopied/wso2mb-${product.mb.version}/repository/resources/security/-->
                                    <!--</directory>-->
                                    <!--<includes>-->
                                        <!--<include>**/*.jks</include>-->
                                    <!--</includes>-->
                                <!--</resource>-->
                            <!--</resources>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                    <!--<execution>-->
                        <!--<id>copy-axis2files</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>copy-resources</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<outputDirectory>${basedir}/src/test/resources/axis2config-->
                            <!--</outputDirectory>-->
                            <!--<resources>-->
                                <!--<resource>-->
                                    <!--<directory>-->
                                        <!--${basedir}/target/tobeCopied/wso2mb-${product.mb.version}/repository/conf/axis2/-->
                                    <!--</directory>-->
                                    <!--<includes>-->
                                        <!--<include>**/*.xml</include>-->
                                    <!--</includes>-->
                                <!--</resource>-->
                            <!--</resources>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                    <!--<execution>-->
                        <!--<id>copy-resources-mar</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>copy-resources</goal>-->
                        <!--</goals>-->
                        <!--<configuration>-->
                            <!--<outputDirectory>${basedir}/src/test/resources/client/modules-->
                            <!--</outputDirectory>-->
                            <!--<resources>-->
                                <!--<resource>-->
                                    <!--<directory>-->
                                        <!--${basedir}/target/tobeCopied/wso2mb-${product.mb.version}/repository/deployment/client/modules-->
                                    <!--</directory>-->
                                    <!--<includes>-->
                                        <!--<include>**/*.mar</include>-->
                                    <!--</includes>-->
                                <!--</resource>-->
                            <!--</resources>-->
                        <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.geronimo.specs.wso2</groupId>
            <artifactId>geronimo-jms_1.1_spec</artifactId>
        </dependency>
    </dependencies>

</project>
